styled the text in assignee card, stage summay, stage headers, stage label and increased padding in the filter wrapper to resolve alignment

--- a/src/styles/_assignee-card.scss
+++ b/src/styles/_assignee-card.scss
@@ -4,5 +4,7 @@ $block-class:'assignee-card';
     .#{$block-class} {
         height: 50px;
         width: 120px;
+        font-size: 16px;
+        color: #5d5d5d;
     }
 }
